<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rando 4Me</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signup">Sign in | Sign up</string>
    <string name="skip">Skip…</string>
    <string name="action_settings">Settings</string>
    <string name="anonymous">Anonymous</string>

    <string name="empty_home_message">No pictures yet.\n Take your first picture and deliver it.</string>
    <string name="missing_storage_permission_message">Device Storage access permission is required to take, download and view Randos. Application won\'t run without this permission.</string>

    <string name="take_picture_screen_label">Take Picture</string>
    <string name="review_and_upload_picture_screen_label">Review and Upload Picture</string>
    <string name="photo_upload_ok">Upload Finished Successfully.</string>

    <string name="photo_upload_failed">"Upload Failed. Please check you connection and try again."</string>
    <string name="failed_to_set_bon_appetit_for_rando">"Bon Appetit Failed. Please check you internet connection and try again."</string>
    <string name="auth_acitvity_label">You are not authorized. Please, signin or signup.</string>


    <string name="email_should_be">You have error in email</string>
    <string name="password_should_be">Password can not be empty</string>
    <string name="no_google_account">No account available. Please add an account to the phone first</string>
    <string name="select_account">Chooise account</string>

    <string name="error_image_too_big">Can not upload image, because image is too big</string>
    <string name="error_unknown_err">Oops, Something wrong…</string>
    <string name="error_no_network">Please check your Internet connection or try again later.</string>

    <string name="get_started">To get started, log in using Facebook</string>

    <string name="app_id">833528743343942</string>

    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="enable_vibration">Vibrate on take rando</string>
    <string name="contact_us">Contact Us</string>
    <string name="report">Yes, report</string>
    <string name="report_rando_confirm">Do you want to report user and delete this rando?</string>
    <string name="rando_reported">User has been reported</string>
    <string name="contact_support">Contact\nSupport</string>
    <string name="report_off">Report OFF</string>
    <string name="report_message">Report</string>

    <string name="login_progress">Login…</string>
    <string name="loading_user_progress">Loading user data…</string>

    <string name="report_rando">Report inappropriate content</string>

    <string name="loading_progress">Loading…</string>
    <string name="logout_progress">Logout…</string>
    <string name="cropping_progress">Prepairing to Upload…</string>
    <string name="uploading_progress">To be uploaded</string>
    <string name="tap_to_update">Tap to update randos</string>

    <string name="version">Version: </string>
    <string name="account">Account: </string>

    <string name="error_400">You are not authorized. Please, signup.</string>
    <string name="error_411">You are temporarily blocked, because of big amount of images sent in a row. Please, try again later:</string>

    <string name="sync_service_name">Rando 4Me Sync Service</string>
    <string name="upload_service_name">Rando 4Me Upload Service</string>

    <string name="crash_toast_text">Device issue detected. Report has been sent to developers. We are working on resolution. Thank you.</string>

    <string name="top_panel_text">Rando 4Me (testing mode)</string>

    <string name="no_location_services">No Location Services Enabled</string>
    <string name="enable_location_services">Enable Location Services</string>
    <string name="image_crop_failed">Image convert Failed. Please take pic once again.</string>
    <string name="camera_init_failed">Sorry, but you cannot use the camera now!</string>
    <string name="close_dialog">Close</string>

    <!-- Help Resources Start -->
    <string name="help_take_title">Take Rando</string>
    <string name="help_take_description">Tap red circle to take Rando and gift it to the stranger</string>

    <string name="help_location_title">Location</string>
    <string name="help_location_description">Tap a Rando to see where it was taken or went to</string>

    <string name="help_delete_title">Delete</string>
    <string name="help_delete_description">Delete unwanted photos. Tap Rando and hold to see delete button</string>

    <string name="help_share_title">Share</string>
    <string name="help_share_description">Share Randos with your friends. Tap Rando and hold to see share button</string>

    <string name="help_guide_title">How to use</string>
    <!-- Help Resources End -->

    <!-- Update Play Services Dialog Resources Start -->
    <string name="update_play_services_dialog_title">Google Play Services</string>
    <string name="update_play_services_dialog_message"></string>
    <string name="update_play_services_dialog_positive">Install/Update</string>
    <string name="update_play_services_dialog_negative">Cancel</string>
    <!-- Update Play Services Dialog Resources End -->

    <string name="sync_nothing_new">Nothing new</string>
    <string name="sync_randos_updated">Randos are updated</string>

    <string name="rando_landed">Your Rando has landed</string>
    <string name="rando_received">You have received new Rando</string>

    <!-- Permission strings Start -->
    <string name="permission_positive_button">Ok</string>
    <string name="location_needed_title">Location Access</string>
    <string name="location_needed_message">Tagging Rando with your rough location requires access this device\'s location</string>
    <string name="camera_needed_title">Camera Access</string>
    <string name="camera_needed_message">Taking Randos, requires camera access</string>
    <string name="storage_needed_title">Storage Access</string>
    <string name="storage_needed_message">Receiving and saving Randos requires access photos, media and files on your device. Application will not run without this permission.</string>
    <string name="contact_needed_title">Contacts Access</string>
    <string name="contact_needed_message">Being able to sign in using social accounts requires access contacts on your device</string>
    <string name="storage_permission_allow">Allow Storage Access</string>
    <!-- Permission strings END -->
    
    <string name="rando_deleted">Rando has beed deleted.</string>
    <string name="delete">Yes, delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_rando">Delete Rando</string>
    <string name="delete_rando_confirm">Do you really want to delete this rando?</string>

    <string name="rando_excluded">Excluded from exchange</string>
    <string name="rando_excluded_text">This Rando was excluded from exchange. This happens for one of the following reasons:\n - duplicated;\n - offensive;\n - boring (e.g. too dark);\n - other reason.</string>
    <string name="ok">Ok</string>

    <string name="share_subject">Share Rando 4Me</string>
    <string name="share_text">I\'ve received amazing photo via Rando4Me: </string>
    <string name="cant_share_not_uploaded">Not uploaded yet. Not possible to share. Please try later.</string>

    <string name="contact_us_email">randoapp.me@gmail.com</string>
    <string name="contact_us_subject">Question about Rando 4Me (%1$s)</string>
    <string name="contact_us_body">"Hi Rando 4Me Team, \n\nI'm using Rando 4Me and my account is: %1$s\nI have following question:\n\n"</string>

    <string name="permanent_ban">Your account has been banned</string>
    <string name="upload_suspend">Resume suspended upload in </string>

    <string name="server_client_id">295176137476-vte4eakbm0k8kb86tfol3oljgtk6r7to.apps.googleusercontent.com</string>



</resources>
