<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/auth_root_scroll">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity$PlaceholderFragment">

        <include layout="@layout/top_panel"/>

        <LinearLayout
            android:layout_marginTop="28dp"
            android:layout_marginBottom="65dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment class="com.github.randoapp.fragment.FacebookFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"/>

            <Button
                android:id="@+id/googleAuthButton"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:layout_height="62dp"
                android:textColor="@android:color/white"
                android:text="Log in with Google"
                android:layout_marginTop="12dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewEmail"
            android:text="@string/email"
            android:textSize="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/SignInEditText"
            android:id="@+id/emailEditText"
            android:imeOptions="actionDone"
            android:textSize="28dp"
            android:inputType="textEmailAddress"
            android:password="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/password"
            android:textSize="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPassword" />

        <EditText
            style="@style/SignInEditText"
            android:id="@+id/passwordEditText"
            android:textSize="28dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:password="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="fill_parent"
            android:textSize="18dp"
            android:layout_height="62dp"
            android:text="@string/signup"
            android:textColor="@color/auth_text"
            android:background="@drawable/signup_button_background"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:id="@+id/textViewSkipLink"
            android:text="@string/skip"
            android:textColor="@color/auth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp" />

    </LinearLayout>
</ScrollView>
