<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/auth_root_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="65dp"
                android:layout_marginTop="28dp"
                android:orientation="vertical">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textSize="28dp" />

                <EditText
                    android:id="@+id/emailEditText"
                    style="@android:style/Widget.Holo.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textSize="28dp" />

                <TextView
                    android:id="@+id/textViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@android:color/black"
                    android:textSize="28dp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@android:style/Widget.Holo.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textSize="28dp" />

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/signup_button_background"
                    android:onClick="signUpClick"
                    android:text="@string/signup"
                    android:textColor="@android:color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textViewSkipLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:onClick="skipLoginClick"
                    android:text="@string/skip"
                    android:textColor="@color/skip_link" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/contactUsButton"
                    style="@style/GrayButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="@string/contact_us"
                    android:textColor="@color/rando_dark_grey"
                    android:layout_gravity="center_horizontal|center"
                    android:onClick="contactUsClick"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
